[package]
name = "nesquic"
version = "0.1.0"
edition = "2021"

[lib]
name = "nesquic"

[features]
# msquic = ["dep:msquic-iut"]
quinn  = ["dep:quinn-iut"]
quiche = ["dep:quiche-iut"]
neqo   = ["dep:neqo-iut"]
noq    = ["dep:noq-iut"]


[dependencies]
anyhow = "1.0.102"
built = { version = "0.8" }
clap = "4.6.0"
libbpf-rs = "0.26.1"
libc = "0.2.184"
# msquic-iut = { path = "../iut/msquic" }
quinn-iut  = { path = "../iut/quinn",  optional = true }
quiche-iut = { path = "../iut/quiche", optional = true }
neqo-iut   = { path = "../iut/neqo",   optional = true }
noq-iut    = { path = "../iut/noq",    optional = true }
tokio = { version = "1.51.0", features = ["signal", "sync"] }
utils = { path = "../utils" }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
prometheus = "0.14.0"
prometheus_push = { version = "0.4.6", default-features = false, features = ["with_reqwest", "prometheus_crate"] }
lazy_static = "1.5.0"
reqwest = { version = "0.13.2", default-features = false, features = ["http2"] }
plain = "0.2.3"
core_affinity = "0.8.3"
futures = "0.3.32"
bpf-tracing = "0.0.1"

[build-dependencies]
libbpf-cargo = "0.26.1"
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }
bpf-tracing-include = "0.0.2"

[dev-dependencies]
test-case = "3.3.1"
