[package]
name = "nesquic"
version = "0.1.0"
edition = "2021"

[lib]
name = "nesquic"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
redhook = "2.0.0"
libc = "0.2.185"
anyhow = "1.0.102"
built = { version = "0.8" }
clap = "4.6.0"
tokio = { version = "1.51.1", features = ["signal", "sync"] }
utils = { path = "../utils" }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
lazy_static = "1.5.0"
reqwest = { version = "0.13.4", default-features = false, features = ["http2"] }
plain = "0.2.3"
futures = "0.3.32"
byte-unit = "5.2.0"

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }
