[package]
name = "nesquic-preload"
version = "0.1.0"
edition = "2021"

# LD_PRELOAD interposition library used to monitor a QUIC library's crypto
# functions from inside its process.
[lib]
name = "nesquic_preload"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
redhook = "2.0.0"
libc = "0.2.185"
