[package]
name = "qbench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.23"
env_logger = "0.11.6"
log = "0.4.22"
quinn-iut = { path = "../iuts/quinn" }
quiche-iut = { path = "../iuts/quiche" }
tokio = { version = "1.42.0", features = ["full"] }
utils = { path = "../utils" }
