[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rcgen"
path = "src/bin/rcgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
average = "0.16.0"
clap = { version = "4.5.56", features = ["derive"] }
tracing = "0.1.44"
rcgen = "0.14.6"
ring = "0.17.14"
tokio = { version = "1.49.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
