[package]
name = "neqo-iut"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nesquic-neqo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
socket2 = "0.6"
tracing = "0.1"
tokio = { version = "1.51.1", features = ["macros", "full"] }
utils = { path = "../../utils" }
iut-common = { path = "../common" }

neqo-transport = { git = "https://github.com/mozilla/neqo.git", package = "neqo-transport", tag = "v0.26.0" }
neqo-crypto    = { git = "https://github.com/mozilla/neqo.git", package = "neqo-crypto",    tag = "v0.26.0" }
neqo-common    = { git = "https://github.com/mozilla/neqo.git", package = "neqo-common",    tag = "v0.26.0" }
neqo-udp       = { git = "https://github.com/mozilla/neqo.git", package = "neqo-udp",       tag = "v0.26.0" }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }
