[package]
name = "neqo-iut"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nesquic-neqo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
socket2 = "0.6"
tracing = "0.1"
quinn-udp = "0.6.1"
tokio = { version = "1.51.1", features = ["macros", "full"] }
utils = { path = "../../utils" }
iut-common = { path = "../common" }
neqo-transport = { git = "https://github.com/mozilla/neqo.git",   package = "neqo-transport", tag = "v0.29.1" }
neqo-common    = { git = "https://github.com/mozilla/neqo.git",   package = "neqo-common",    tag = "v0.28.1" }
neqo-udp       = { git = "https://github.com/mozilla/neqo.git",   package = "neqo-udp",       tag = "v0.28.1" }
nss            = { git = "https://github.com/mozilla/nss-rs.git", package = "nss-rs",         rev = "0.9.0"   }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }
