[package]
name = "noq-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
tracing = "0.1.44"
noq = { version = "0.17.0", features = ["qlog"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring"] }
socket2 = "0.6.3"
tokio = { version = "1.51.1", features = ["macros", "full"] }
utils = { path = "../../utils" }
