[package]
name = "noq-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
tracing = "0.1.44"
noq = { version = "0.18.0", features = ["qlog"] }
qlog_noq = { package = "n0-qlog", version = "0.1.1" }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
socket2 = "0.6.3"
tokio = { version = "1.52.3", features = ["macros", "full"] }
utils = { path = "../../utils" }
