[package]
name = "quinn-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
tracing = "0.1.44"
quinn = { version = "0.11.9", features = ["rustls"] }
quinn-proto = "0.11.13"
rustls = { version = "0.23.36", default-features = false, features = ["ring"] }
socket2 = "0.6.2"
tokio = { version = "1.49.0", features = ["macros", "full"] }
url = "2.5.8"
utils = { path = "../../utils" }
