[package]
name = "quinn-iut"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nesquic-quinn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
tracing = "0.1.44"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-aws-lc-rs", "bloom", "log"] }
quinn-proto = { version = "0.11.14", default-features = false, features = ["rustls-aws-lc-rs", "bloom", "log"] }
rustls = { version = "0.23.38", default-features = false, features = ["aws_lc_rs"] }
aws-lc-sys = { version = "0.41", features = ["bindgen"] }
socket2 = "0.6.3"
tokio = { version = "1.51.1", features = ["macros", "full"] }
url = "2.5.8"
utils = { path = "../../utils" }
iut-common = { path = "../common" }

[build-dependencies]
built = { version = "0.8", features = ["cargo-lock", "dependency-tree"] }
