[package]
name = "quiche-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.89"
env_logger = "0.11.1"
log = "0.4.20"
quiche = "0.24.2"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
ring = "0.17.14"
url = "2.5.0"
utils = { path = "../../utils" }
