[package]
name = "quinn-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.89"
bytes = "1.5.0"
env_logger = "0.11.1"
log = "0.4.20"
quinn = { version = "0.10.2", features = ["rustls"] }
quinn-proto = "0.10.6"
rustls = { version = "0.21.0", features = ["dangerous_configuration", "quic"] }
rustls-pemfile = "2.0.0"
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["macros", "full"] }
url = "2.5.0"
utils = { path = "../../utils" }
