[package]
name = "quinn-iut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
tracing = "0.1.41"
quinn = { version = "0.11.9", features = ["rustls"] }
quinn-proto = "0.11.13"
rustls = { version = "0.23.35", default-features = false, features = ["ring"] }
socket2 = "0.5.5"
tokio = { version = "1.35.1", features = ["macros", "full"] }
url = "2.5.0"
utils = { path = "../../utils" }
