[package]
name = "schema"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.8", features = ["attributes", "tokio1"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["postgres"] }
log = { version = "0" }
sea-schema = { version = "0.16.0", default-features = false, features = [
    "with-serde",
    "sqlx-postgres",
    "runtime-async-std",
    "discovery",
    "debug-print",
] }
